# patents_agent

./: .env.example  .gitignore  AGENTS.md  ARIS.md  CHANGELOG.md  PR_REVIEW_79_80.md  README.md  package-lock.json  pyproject.toml
.artifacts/: v1.1.0-tauri-dmg-smoke-report.md
.cleanup-backup-20260616/: backend.spec  backend_server.py
.github/issuer/: config.py  github_client.py  inspector.py  runner.py  utils.py  verifier.py
.github/workflows/: agent-label-guard.yml  ci.yml  eval.yml  issuer.yml
.gstack/: browse.json
.gstack/qa-reports/: baseline.json  bug-triage-round1-2026-06-27.md  qa-report-127-0-0-1-2026-06-23.md  qa-report-patentagent-local-2026-06-26.md  qa-report-patentagent-local-round10-2026-06-26.md  qa-report-patentagent-local-round11-2026-06-27.md  qa-report-patentagent-local-round12-2026-06-27.md  qa-report-patentagent-local-round13-2026-06-27.md  qa-report-patentagent-local-round14-2026-06-27.md  qa-report-patentagent-local-round15-2026-06-27.md  qa-report-patentagent-local-round16-2026-06-27.md  qa-report-patentagent-local-round17-2026-06-27.md  qa-report-patentagent-local-round18-2026-06-27.md  qa-report-patentagent-local-round19-2026-06-27.md  qa-report-patentagent-local-round2-2026-06-26.md  qa-report-patentagent-local-round20-2026-06-27.md  qa-report-patentagent-local-round21-2026-06-27.md  qa-report-patentagent-local-round22-2026-06-27.md  qa-report-patentagent-local-round23-2026-06-27.md  (+99 more)
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
.superpowers/sdd/: progress.md  (+12 more)
backend/: __init__.py
desktop/: .gitignore  package-lock.json  package.json  tsconfig.json
docs/: desktop-packaging-handoff.md  project-design-overview.md  review-codex-remove-electron-tauri-only.md  review-pr74-pr75.md  review-pr76.md  review-pr79.md  review-pr80.md
frontend/: components.json  index.html  openapi.config.mjs  package-lock.json  package.json  vite.config.ts
reports/: goal-patent-flow-2026-06-30.md
samples/: algorithmic_route_planning.md  external_draft_invention.md  invention_ai_monitoring.md  sensing_inspection_quality.md  utility_model_structure.md
scripts/: backend.spec  backend_server.py  bootstrap_v1_agent_pipeline.py  build_backend_sidecar.sh  golden_quality_gate.py  package_dmg.sh  qa_preflight.py  scrape_golden_set.py  tauri_dmg_smoke.py  v1_api_smoke.py  v1_smoke.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: adversarial_flow_harness.py  agent_journey_runner.py  conftest.py  flow_driver.py  golden_patent_evaluator.py  helpers.py  test_adversarial_flow_explorer.py  test_agent_journey_runner.py  test_agent_langgraph_adapter.py  test_agent_registry.py  test_agent_runtime.py  test_agent_runtime_cli.py  test_agents.py  test_api.py  test_api_router_foundation.py  test_api_settings.py  test_browser_evidence_backend.py  test_claim_defense.py  test_cnipa_export_importer.py  test_content_disposition.py  test_core_formula.py  test_corpus_api.py  test_corpus_api_router.py  test_corpus_pipeline.py  test_db_session.py  test_deep_research.py  test_deep_research_intake.py  test_deep_research_intake_integration.py  test_deliberation_api.py  test_deliberation_concurrency.py  test_deliberation_workflow.py  test_desktop_electron_skeleton.py  test_disclosure.py  test_disclosure_exporter.py  test_disclosure_prior_art.py  test_draft_audit_rules.py  test_draft_completion.py  test_draft_completion_api.py  test_evidence_binding.py  test_evidence_sources.py  (+49 more)
(+539 files in other folders)
