[project]
name = "patents-agent"
version = "0.6.0"
description = "Guided patent engineering system for Chinese invention patent drafting."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "python-docx>=1.1.2",
  "PyMuPDF>=1.24.0",
  "openpyxl>=3.1.0",
  "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]
chroma = [
  "chromadb>=0.5.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "golden_eval: golden-set evaluation tests",
    "llm_judge: LLM-as-Judge tests (require EVAL_LLM_API_KEY)",
]
