[package]
name = "patentagent-tauri"
version = "1.1.0"
description = "Tauri v2 desktop runtime for PatentAgent"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
